<resources>
    <string name="app_name">Numbers</string>
    <string name="enter_number_title">Enter the number:</string>
    <string name="start_button">Start</string>
    <string name="nav_draw_close">Close</string>
    <string name="nav_draw_open">Open</string>
    <string name="app_header">Numbers and their properties</string>
    <string name="nav_number_info">Number Information</string>
    <string name="nav_gym">Check yourself</string>
    <string name="nav_lottery">Lottery</string>
    <string name="nav_properties">Properties</string>
    <string name="nav_algorithms">Algorithms</string>
    <string name="nav_full_version">Full Version</string>
    <string name="number_title">Number: </string>
    <string name="number_parity">Parity: </string>
    <string name="binary_title">Binary: </string>
    <string name="octal_title">Octal: </string>
    <string name="hexadecimal_title">Hexadecimal: </string>
    <string name="perfect_square_title">Is Perfect Square: </string>
    <string name="square_root_title">Square root: </string>
    <string name="fibonacci_title">Is Fibonacci number: </string>
    <string name="left_fibonacci_title">Left Fibonacci Number: </string>
    <string name="right_fibonacci_title">Right Fibonacci Number: </string>
    <string name="prime_title">Is Prime Number: </string>
    <string name="semi_prime_number">Is Semi-Prime Number: </string>
    <string name="semi_yes_result">True </string>
    <string name="semi_no_result">False</string>
    <string name="rgb_title">RGB: </string>
    <string name="load_title">Loading</string>
    <string name="load_message">Please wait…</string>
    <string name="components_title">All factors:</string>
    <string name="semi_factors">Factors:</string>
    <string name="first_semi_factor">First: </string>
    <string name="second_semi_factor">Second: </string>
    <string-array name="prop_paragraphs">
        <item>Divisibility criteria</item>
       
        <item>Sequences</item>
        <item>Number systems</item>
        <item>Kinds of numbers</item>
        <item>Trigonometric properties</item>
        <item>Logarithmic properties</item>
        <item>Power properties</item>
        <item>Properties of derivatives</item>
        <item>Properties of integrals</item>
        <item>Probability</item>
    </string-array>
    <string-array name="algo_paragraphs_title">
        <item>Greater Common Divisor</item>
        <item>Checking a number for simplicity</item>
        <item>Sieve of Eratosthenes</item>
        <item>Exponentiation</item>
        <item>Finding Fibonacci numbers</item>
        <item>RGB</item>
    </string-array>
    <string-array name="algo_paragraphs_desc">
        <item>All ways</item>
        <item>All ways</item>
        <item>Find all prime numbers between 2 and n</item>
        <item>Fast</item>
        <item>Simple methods</item>
        <item>Getting a color from a number</item>
    </string-array>
    <string name="gcd_text1"><![CDATA[

<b>Greatest common factor</b> of two integers a and b are called the largest natural numbers d such that a is divisible by d and b is divisible by d.<br><br>

The greatest common divisor exists and is uniquely determined if at least one of the numbers m or n is not zero.<br><br>

<b>Naive algorithm for finding GCD:</b><br>
In a naive way, we assume that we know the prime factorizations of the numbers a and b. We just need to make an intersection of the two divisor lists.<br>The time complexity: is the minimum length of the lists.<br><br>
<b>Subtraction Algorithm:</b><br>
It can be formulated as follows:<br>
If two natural numbers a and b are given, then while a is not equal to b, you need to subtract the smaller from the larger. Then we have 2 outcomes:<br>
1) In the process of subtractions, one of our numbers became one, and the other did not, which means that GCD = 1.<br>
2) In the process of subtractions, one number became equal to another - this number is the GCD of our numbers<br>
The time complexity: O (n).<br><br>
<b>Euclid\'s Algorithm:</b><br>
It can be formulated as follows:<br>
If you are given two natural numbers a and b, then until a is equal to b or one of the numbers is not equal to one, you need to continue division with the remainder, i.e. take the remainder of dividing (mod) a larger number by a smaller one and write it to a larger one. As in the previous algorithm, if one of the numbers becomes equal to one, then this is the GCD.<br>
The time complexity: O (log (min(a, b)))

    ]]></string>
    <string name="prime_algo_text1"><![CDATA[
<b>First way:</b>
To check the number n for simplicity, you need to go over all numbers from 2 to n-1. If it is divisible by at least one of them, then it is not simple.<br>
Time Complexity: O (n).<br><br>
<b>Second way:</b><br>
To check the number n for simplicity, you need to go over all numbers from 2 to the square root of n.<br>
Time Complexity: O (sqrt(n)).
    ]]></string>
    <string name="sieve_algo_text1"><![CDATA[
This algorithm finds all primes from 2 to n.<br>
1) Write out all the numbers from 2 to n<br>
2) Take the first number (in order), let it be p, and cross out all other numbers starting with 2p that are divisible by p.<br>
3) After we have done this, find the first uncrossed number greater than p and repeat step 2.<br>
4) Repeat until p is greater than n.<br>
5) All remaining numbers are prime.<br><br>
This algorithm can be improved by the fact that in step 3 you can start deleting not with 2p, but with p ^ 2. Accordingly, the algorithm can be stopped when p ^ 2 becomes greater than n.
    ]]></string>
    <string name="fast_exp_text1"><![CDATA[
<b>Fast exponentiation algorithm</b> - an algorithm designed to raise a number x to a natural power n in fewer multiplications than is required in the definition.<br>
Pseudocode:<br><br>
function Power(value, pow: int): int<br>
 &#160;&#160;int result = 1<br>
 &#160;&#160;while (pow > 0)<br>
  &#160; &#160;&#160;&#160; if pow mod 2 == 1<br>
     &#160;&#160;&#160;&#160;&#160;&#160; result *= value<br>
  &#160; &#160;&#160;&#160; value *= value<br>
  &#160; &#160;&#160;&#160; pow /= 2;<br>
 &#160;&#160; return result;<br>
    ]]></string>
    <string name="fib_main_text1">
        <![CDATA[
The simplest algorithms for finding the fibonacci number n are:<br>
<b>1) Recursive solution</b><br>
Pseudocode:<br>
int fib (int n) {<br>
&#160;if (n &lt;2) return n;<br>
&#160;else return fib (n-1) + fib (n-2);<br>
}<br>
This method is very simple, but it takes (fi) ^ n time, where <i>fi is the golden ratio.</i><br><br>
<b>2) Dynamic solution:</b><br>
Pseudocode:<br>
int fib (int n) {<br>
&#160;if (n &lt;= 2) return 1;<br>
&#160;int [] array = new int [n + 1];<br>
&#160;array [1] = 1;<br>
&#160;array [2] = 1;<br>
&#160;for (int i = 3; i &lt;= n; i ++) {<br>
&#160;&#160;array [i] = array [i-1] + array [i-2];<br>
&#160;}<br>
&#160;return array [n];<br>
}<br>
This method is more complicated than the previous one, but it already requires O (n) time and O (n) memory.<br><br>
<b>3) An elegant solution:</b><br>
Pseudocode:<br>
int fib (int n){<br>
&#160;int x = 1;<br>
&#160;int y = 0;<br>
&#160;for (int i = 0; i &lt; n; i ++)<br>
&#160;{<br>
&#160;&#160;x + = y;<br>
&#160;&#160;y = x - y;<br>
&#160;}<br>
&#160;return y;<br>
}<br>
This solution requires O (n) time, but already O (1) memory.
        ]]>
    </string>
    <string name="rgb_text1"><![CDATA[
<b>RGB</b> is a color coding color model where the primary colors are red, green and blue, respectively.<br><br>
To get RGB, you need to translate the desired number into a hexadecimal number system <i>(remember that RGB can encode only 2 ^ 24 colors and if the desired number is greater than this, then you need to find the remainder of dividing this number by 2 ^ 24 and use the result).</i><br><br>
After converting the number to the hexadecimal number system, you need to put zeros in front of the number if the number has less than 6 digits. It remains to put a lattice in front of the number.<br><br>
Let\'s say we got the number # 3221A1, then 32 is responsible for red, 21 is for green, and A1 is for blue.
    ]]></string>
    <string name="div_crit_text">
<![CDATA[
<b>A number is divisible by 2</b> if and only if its last digit is divisible by 2, that is, it is even.<br><br>
<b>A number is divisible by 3</b> if and only if the sum of its digits is divisible by 3.<br><br>
<b>A number is divisible by 4</b> if and only if its last two digits make up a number that is divisible by 4. A two-digit number is divisible by 4 if and only if the doubled digit in the tens place added with the digit in the ones place is divisible by 4.<br><br>
<b>A number is divisible by 5</b> when the last digit is divisible by 5, i.e. if it is 0 or 5.<br><br>
<b>A number is divisible by 6</b> if and only if it is divisible by both 2 and 3, that is, if it is even and the sum of its digits is divisible by 3. Another sign of divisibility: the number is divisible by 6 if and only if the quadruple number of tens added to the ones digit is divided by 6.<br><br>
1) <b>A number is divisible by 7</b> when the threefold number of tens added to the digit in the ones place is divisible by 7.<br>
2) <b>A number is divisible by 7</b> if and only if the modulus of the algebraic sum of numbers forming odd groups of three digits (starting with ones), taken with a "+" sign, and even ones with a "-" sign is divisible by 7.<br>
3) <b>A number is divided by 7</b>, if the difference between the number consisting of the last three digits of the given number and the number formed from the remaining digits of the given number (that is, without the last three digits) is divisible by 7, then this number is divided by 7.<br><br>
<b>A number is divisible by 8</b> when the last three digits are divisible by 8. A three-digit number is divisible by 8 if and only if a digit in the ones place, added with a double digit in the tens place and a quadruple in the hundreds place, is divisible by 8.<br><br>
<b>A number is divisible by 9</b> when the sum of its digits is divisible by 9. For example, the sum of the digits of 12345678 is divisible by 9, hence the number itself is divisible by 9.<br><br>
<b>A number is divisible by 10</b> if and only if it ends in zero.<br><br>
1) <b>A number is divisible by 11</b> if and only if the modulus of the difference between the sum of the digits occupying odd positions and the sum of the digits occupying even places is divisible by 11.<br>
2) <b>A number is divisible by 11</b> if and only if the sum of the numbers that form groups of two digits (starting with ones) is divided by 11.<br><br>
1) <b>A number is divisible by 13</b> when the sum of the four-digit tens in the ones place is divided by 13.<br>
2) <b>A number is divisible by 13</b> when the sum of the four-digit tens in the ones place is divisible by 13.<br>
3) <b>A number is divisible by 13</b> if the difference between the number consisting of the last three digits of the given number and the number formed from the remaining digits of the given number (that is, without the last three digits) is divided by 13.
]]>
    </string>
    <string name="sequences_1"><![CDATA[
<b>An arithmetic progression</b> is a numerical sequence, each term of which is equal to the previous one, added with the same number. This number is called the difference of the arithmetic progression and is denoted by d.
    ]]>
Arithmetic progression formula:</string>
    <string name="sequences_2">Sum of arithmetic progression:</string>
    <string name="sequences_3">The sum of the first n natural numbers is expressed by the formula:</string>
    <string name="lottery_header">Everyday Challenge</string>
    <string name="lottery_title">Try to guess a number between 100 and 1,000,000 first time and get $ 15</string>
    <string name="lottery_button">Guess</string>
</resources>